acme_fitnessv2/cluster1.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cart-redis
  labels:
    app: cart-redis
    service: cart-redis
spec:
  ports:
    - port: 6379
      name: tcp-redis-cart
  selector:
    app: cart-redis
    service: cart-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-redis
  labels:
    app: cart-redis
    service: cart-redis
spec:
  selector:
    matchLabels:
      app: cart-redis  # has to match .spec.template.metadata.labels
      service: cart-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: cart-redis  # has to match .spec.selector.matchLabels
        service: cart-redis
    spec:
      containers:
        - name: cart-redis
          image: redis:5.0.3-alpine
          command:
            - "redis-server"
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
          ports:
            - name: tcp-redis
              containerPort: 6379
              protocol: "TCP"
          volumeMounts:
            - mountPath: /var/lib/redis
              name: redis-data
#            - mountPath: /etc/redis
#              name: redis-config
      volumes:
        - name: redis-data
          emptyDir: {}
#        - name: redis-config
#          configMap:
#            name: redis-config
#            items:
#              - key: redis-config
#                path: redis.conf
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  labels:
    app: cart
    service: cart
spec:
  ports:
    - name: http-cart
      protocol: TCP
      port: 5000
  selector:
    app: cart
    service: cart
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  labels:
    app: cart
    service: cart
spec:
  selector:
    matchLabels:
      app: cart
      service: cart
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: cart
        service: cart
    spec:
      volumes:
      - name: cart-data
        emptyDir: {}
      containers:
      - image: gcr.io/vmwarecloudadvocacy/acmeshop-cart:1.0.0
        name: cart
        ports:
        - containerPort: 5000
          name: http-cart
        volumeMounts:
        - mountPath: "/data"
          name: "cart-data"
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: shopping
  labels:
    app: shopping
    service: shopping
spec:
  ports:
    - name: http-shopping
      protocol: TCP
      port: 3000
  selector:
    app: shopping
    service: shopping
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: shopping
  labels:
    app: shopping
    service: shopping
spec:
  selector:
    matchLabels:
      app: shopping
      service: shopping
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: shopping
        service: shopping
    spec:
      containers:
      - image: gcr.io/vmwarecloudadvocacy/acmeshop-front-end:rel1
        name: shopping
        ports:
        - containerPort: 3000
          name: http-shopping
---
apiVersion: v1
kind: Service
metadata:
  name: order-mongo
  labels:
    app: order-mongo
    service: order-mongo
spec:
  ports:
    - port: 27017
      name: mongo-order
      protocol: TCP
  selector:
    app: order-mongo
    service: order-mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-mongo
  labels:
    app: order-mongo
    service: order-mongo
spec:
  selector:
    matchLabels:
      app: order-mongo  # has to match .spec.template.metadata.labels
      service: order-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: order-mongo  # has to match .spec.selector.matchLabels
        service: order-mongo
    spec:
      containers:
        - name: order-mongo
          image: mongo:4
          resources:
            {}
          ports:
            - name: mongo-order
              containerPort: 27017
              protocol: "TCP"
          volumeMounts:
            - mountPath: /data/db
              name: mongodata
      volumes:
        - name: mongodata
          emptyDir: {}
#        - name: mongodata
#          persistentVolumeClaim:
#            claimName: mongodata
---
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  ports:
    - name: http-order
      protocol: TCP
      port: 6000
  selector:
    app: order
    service: order
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  selector:
    matchLabels:
      app: order
      service: order
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: order
        service: order
    spec:
      volumes:
      - name: order-data
        emptyDir: {}
      containers:
      - image: gcr.io/vmwarecloudadvocacy/acmeshop-order:1.0.1
        name: order
        ports:
        - containerPort: 6000
          name: http-order
        volumeMounts:
        - mountPath: "/data"
          name: "order-data"
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
    service: payment
spec:
  ports:
    - name: http-payment
      protocol: TCP
      port: 9000
  selector:
    app: payment
    service: payment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app: payment
    service: payment
spec:
  selector:
    matchLabels:
      app: payment
      service: payment
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: payment
        service: payment
    spec:
      containers:
      - image: gcr.io/vmwarecloudadvocacy/acmeshop-payment:1.0.0
        name: payment
        ports:
        - containerPort: 9000
          name: http-payment
---
apiVersion: v1
kind: Service
metadata:
  name: users-mongo
  labels:
    app: users-mongo
    service: users-mongo
spec:
  ports:
    - port: 27017
      name: mongo-users
      protocol: TCP
  selector:
    app: users-mongo
    service: users-mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-mongo
  labels:
    app: users-mongo
    service: users-db
spec:
  selector:
    matchLabels:
      app: users-mongo  # has to match .spec.template.metadata.labels
      service: users-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: users-mongo  # has to match .spec.selector.matchLabels
        service: users-mongo
    spec:
      containers:
        - name: users-mongo
          image: mongo:4
          resources:
            {}
          ports:
            - name: mongo-users
              containerPort: 27017
              protocol: "TCP"
          volumeMounts:
            - mountPath: /data/db
              name: mongodata
            - mountPath: /docker-entrypoint-initdb.d
              name: mongo-initdb
      volumes:
        - name: mongodata
          emptyDir: {}
        - name: mongo-initdb
          configMap:
            name: users-initdb-config
#        - name: mongodata
#          persistentVolumeClaim:
#            claimName: mongodata
---
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    app: users
    service: users
spec:
  ports:
    - name: http-users
      protocol: TCP
      port: 8081
  selector:
    app: users
    service: users
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
    service: users
spec:
  selector:
    matchLabels:
      app: users
      service: users
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: users
        service: users
    spec:
      volumes:
      - name: users-data
        emptyDir: {}
      containers:
      - image: gcr.io/vmwarecloudadvocacy/acmeshop-user:1.0.0
        name: users
        ports:
        - containerPort: 8081
          name: http-users
        volumeMounts:
        - mountPath: "/data"
          name: "users-data"
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
