acme_fitnessv2/istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: acme-gateway
  namespace: acme-fitness
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: acme-fitness-tls
    hosts:
    - "acme-fitness.lab.home"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acme
  namespace: acme-fitness
spec:
  hosts:
  - "acme-fitness.lab.home"
  gateways:
  - acme-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: shopping
        port:
          number: 3000
